creation des fichiers dans le dossier route

--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,2 @@
+Cle_mistral_ai = oxHA7D7BXcNrRe4f5SwN1GwaAviWesVY
 Database_url = postgresql://postgres:[saboursatson667]@db.fhvybccmwsbhlilspbbi.supabase.co:5432/postgres
