--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,10 +1,112 @@
-fastapi
-uvicorn[standard]
-sqlmodel
-psycopg2-binary
-python-dotenv
-mistralai
-passlib[bcrypt]
-python-jose[cryptography]
-python-multipart
-
+aiohappyeyeballs==2.6.1
+aiohttp==3.13.2
+aiosignal==1.4.0
+annotated-doc==0.0.4
+annotated-types==0.7.0
+anyio==4.12.1
+argon2-cffi==25.1.0
+argon2-cffi-bindings==25.1.0
+asgiref==3.11.0
+attrs==25.4.0
+bcrypt==4.3.0
+beautifulsoup4==4.13.4
+blinker==1.9.0
+certifi==2025.1.31
+cffi==2.0.0
+charset-normalizer==3.4.1
+click==8.2.1
+colorama==0.4.6
+cryptography==46.0.4
+Django==5.2.8
+dnspython==2.7.0
+ecdsa==0.19.1
+email_validator==2.2.0
+eval_type_backport==0.3.1
+fastapi==0.128.0
+fastapi-cli==0.0.20
+fastapi-cloud-cli==0.11.0
+fastar==0.8.0
+filelock==3.18.0
+Flask==3.1.1
+Flask-Bcrypt==1.0.1
+Flask-Login==0.6.3
+Flask-Mail==0.10.0
+Flask-SQLAlchemy==3.1.1
+Flask-WTF==1.2.2
+frozenlist==1.8.0
+googleapis-common-protos==1.72.0
+greenlet==3.2.3
+h11==0.16.0
+httpcore==1.0.9
+httptools==0.7.1
+httpx==0.28.1
+idna==3.10
+importlib_metadata==8.7.1
+invoke==2.2.1
+itsdangerous==2.2.0
+Jinja2==3.1.6
+lxml==5.3.2
+markdown-it-py==4.0.0
+MarkupSafe==3.0.2
+mdurl==0.1.2
+mistralai==1.11.1
+MouseInfo==0.1.3
+multidict==6.7.0
+opentelemetry-api==1.38.0
+opentelemetry-exporter-otlp-proto-common==1.38.0
+opentelemetry-exporter-otlp-proto-http==1.38.0
+opentelemetry-proto==1.38.0
+opentelemetry-sdk==1.38.0
+opentelemetry-semantic-conventions==0.59b0
+passlib==1.7.4
+pillow==11.2.1
+propcache==0.4.1
+protobuf==6.33.5
+psycopg2-binary==2.9.11
+pyasn1==0.6.2
+PyAutoGUI==0.9.54
+pycparser==2.23
+pydantic==2.12.5
+pydantic-extra-types==2.11.0
+pydantic-settings==2.12.0
+pydantic_core==2.41.5
+PyGetWindow==0.0.9
+Pygments==2.19.2
+PyMsgBox==1.0.9
+pynput==1.8.1
+pyperclip==1.9.0
+PyRect==0.2.0
+PyScreeze==1.0.1
+PySocks==1.7.1
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.1
+python-jose==3.5.0
+python-multipart==0.0.21
+pytweening==1.2.0
+PyYAML==6.0.3
+requests==2.32.3
+rich==14.2.0
+rich-toolkit==0.17.1
+rignore==0.7.6
+rsa==4.9.1
+sentry-sdk==2.49.0
+shellingham==1.5.4
+six==1.17.0
+snscrape==0.7.0.20230622
+soupsieve==2.6
+SQLAlchemy==2.0.41
+sqlmodel==0.0.32
+sqlparse==0.5.4
+starlette==0.50.0
+typer==0.21.1
+typing-inspection==0.4.2
+typing_extensions==4.15.0
+tzdata==2025.2
+urllib3==2.4.0
+uvicorn==0.40.0
+watchfiles==1.1.1
+websockets==16.0
+Werkzeug==3.1.3
+WTForms==3.2.1
+yarl==1.22.0
+zipp==3.23.0
