--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,13 +9,19 @@ services:
       - /app/.venv
     env_file:
       - ./backend/.env
+    command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
     restart: always
 
   frontend:
-    build: ./frontend
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile.dev
     container_name: chatbot-frontend
     ports:
-      - "8080:80"
+      - "5173:5173"
+    volumes:
+      - ./frontend:/app
+      - /app/node_modules
     depends_on:
       - backend
     restart: always
